@startuml
'https://plantuml.com/class-diagram
skinparam classAttributeIconSize 0

class ListWaitingRoomUI
class ListWaitingRoomController{
+getUsersWaitingRoom()
}
class Company{
+getWaitingRoom()
}
class UserArrivalStore{
+listUsersInWaitingRoom()
}
class Application{
+getInstance()
+getCompany()
}


ListWaitingRoomUI ..> ListWaitingRoomController
ListWaitingRoomController ..> Company
ListWaitingRoomController .left.> Application
Application ..> Company
ListWaitingRoomController ..> UserArrivalStore
Company --> UserArrivalStore : has



@enduml